feat: Implement Java 21 support.